added cgi files, added delete files,added on filesystem statics,added best location to client,added ressource checking if found in GET

--- a/public/planet/index.html
+++ b/public/planet/index.html
@@ -9,7 +9,7 @@
 <p>Click <a href="page2.html">here /image</a> to see another page,
 or click <a href="test.txt">here</a> to download a text file.</p>
 
-<img src="/smile.png"/>
+<img src="/planet/smile.png"/>
 
 </body>
 </html>
