--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,12 @@
-
-
-<p>Click <a href="page2.html">here</a> to see another page,
-or click <a href="test.txt">here</a> to download a text file.</p>
-
-<img src="/smile.png"/>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	
 </body>
-
-<!-- <script>
-	function timedRefresh(timeoutPeriod) {
-	setTimeout("location.reload(true);",timeoutPeriod);
-}
-
-window.onload = timedRefresh(500);
-</script> -->
 </html>
